force-app/main/default/objects/Bucket_Mapping__c/Bucket_Mapping__c.object-meta.xml
<CustomObject>
    <label>Bucket Mapping</label>
    <nameField>
        <displayFormat>Bucket Mapping - {0000}</displayFormat>
        <label>Bucket Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bucket Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>