force-app/main/default/objects/Bucket_Mapping__c/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <label>Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bucket 1</fullName>
            </value>
            <value>
                <fullName>Bucket 2</fullName>
            </value>
            <value>
                <fullName>Bucket 3</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Accounting Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>