force-app/main/default/objects/Bucket_Mapping__c/fields/Course_Values__c.field-meta.xml
<CustomField>
    <fullName>Course_Values__c</fullName>
    <label>Course Values</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Course</valueSetName>
    </valueSet>
</CustomField>