force-app/main/default/objects/Bucket_Mapping__c/fields/Source_Values__c.field-meta.xml
<CustomField>
    <fullName>Source_Values__c</fullName>
    <label>Source Values</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source</valueSetName>
    </valueSet>
</CustomField>