force-app/main/default/objects/Bucket_Mapping__c/recordTypes/Course.recordType-meta.xml
<RecordType>
    <fullName>Course</fullName>
    <active>true</active>
    <label>Course</label>
</RecordType>