force-app/main/default/objects/Bucket_Mapping__c/recordTypes/Source.recordType-meta.xml
<RecordType>
    <fullName>Source</fullName>
    <active>true</active>
    <label>Source</label>
</RecordType>